log
Wed 15 May 2024 09:18:15 PM UTC: 
 sudoku.c | 43 +++++++++++++++++++++++++++++++++++++++++--
 1 file changed, 41 insertions(+), 2 deletions(-)
test.c:245:5: error: redefinition of ‘main’
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
sudoku.c:108:5: note: previous definition of ‘main’ with type ‘int(int,  char **)’
  108 | int main( int argc, char *argv[] ){
      |     ^~~~
Compilation failed
fd3347b
Wed 15 May 2024 09:19:55 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
8a9b854
Wed 15 May 2024 09:59:03 PM UTC: 
 sudoku.c | 20 ++++++++++++++++++--
 1 file changed, 18 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:97:24: error: ‘col’ undeclared (first use in this function)
   97 |       if (n->sudo[fil][col] == 0){
      |                        ^~~
sudoku.c:97:24: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:102:11: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
  102 |    return list;
      |           ^~~~
      |           List
sudoku.c:103:1: error: control reaches end of non-void function [-Werror=return-type]
  103 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
98c132c
Wed 15 May 2024 09:59:20 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:98:24: error: ‘col’ undeclared (first use in this function)
   98 |       if (n->sudo[fil][col] == 0){
      |                        ^~~
sudoku.c:98:24: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e645b23
Wed 15 May 2024 09:59:59 PM UTC: 
 sudoku.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  4|3
total_score: 30/70
0a10b7f
Wed 15 May 2024 10:05:25 PM UTC: 
 sudoku.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:5:
test.c: In function ‘get_adj_nodes’:
sudoku.c:107:12: error: ‘fil’ is used uninitialized [-Werror=uninitialized]
  107 |    if (fil == 9 && col == 9){
      |        ~~~~^~~~
sudoku.c:107:24: error: ‘col’ is used uninitialized [-Werror=uninitialized]
  107 |    if (fil == 9 && col == 9){
      |                    ~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
bfe6e6a
Wed 15 May 2024 10:07:53 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|3
total_score: 30/70
e41ae7d
Wed 15 May 2024 10:18:12 PM UTC: 
 sudoku.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  7|1
total_score: 55/70
24e6340
Wed 15 May 2024 10:24:42 PM UTC: 
 sudoku.c | 25 +++++++++++++++++++++++++
 1 file changed, 25 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:142:28: error: void value not ignored as it ought to be
  142 |       Node* current_node = pop(S);
      |                            ^~~
Compilation failed
2c888f4
